frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "frontend.cloudbasket.net"
    secretName: "frontend.cloudbasket.net"
  rules:
  - host: "frontend.cloudbasket.net"
    http:
      paths: 
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-lb
            port:
              number: 80
